# sukonbu

./: .env  .gitignore  .gitmodules  README.md  launch.py  python_test.py  setup.cfg  setup.py
cpp_user/: CMakeLists.txt  tests.cpp
gltfformat/: CMakeLists.txt  tests.cpp
gltfformat/include/gltfformat/: bin.h  glb.h  gltf.h  gltf_nlohmann_json.h
sukonbu/: __init__.py  __main__.py  cli.py  json_schema.py  json_schema_parser.py  run.py
sukonbu/generators/: cpp.py  dlang.py  py.py  python.py
tests/: generator_test.py  python_generated_test.py
