[metadata]
name = sukonbu
version = attr: src.VERSION
description = A code generator for GLTF read/write
long_description = file: README.md
keywords = one, two
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7

[options]
install_requires =
  jinja2
